New Next trying to fix Vercel bugd

--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.17",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "13.5.4",
+    "react": "^18",
+    "react-dom": "^18",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest"
+    "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
+    "postcss": "^8",
+    "tailwindcss": "^3"
   }
 }
